Bug #1702615: Improve color contrast for link color in the Modern theme
behatnotneeded: Style change only

--- a/htdocs/theme/modern/sass/_custom.scss
+++ b/htdocs/theme/modern/sass/_custom.scss
@@ -12,3 +12,8 @@
     color: $state-danger-text;
   }
 }
+
+// Lighten the Administration link in the menu bar in the admin area
+div.admin-title a {
+  color:#4DB1D6;
+}
