--- a/htdocs/theme/modern/sass/utilities/_bootstrap-variables.scss
+++ b/htdocs/theme/modern/sass/utilities/_bootstrap-variables.scss
@@ -60,7 +60,7 @@ $body-bg:               #fff;
 $text-color:            $theme-text-color;
 
 //** Global textual link color.
-$link-color:            #4DB1D6;
+$link-color:            #1f6c88;
 //** Link hover color set via `darken()` or `lighten()` function.
 $link-hover-color:      darken($link-color, 5%);
 //** Link hover decoration.
